Modificacion de index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,29 @@
   <title>Proyecto1 Git</title>
 </head>
 <body>
-  <h1>Proeycto</h1>
+  <h1>Proyecto 1 Git</h1>
+
+  <header>
+    <h1>proyecto</h1>
+  </header>
+  <nav>  
+    <ul>
+      <li>adidas</li>
+      <li>Nike</li>
+      <li>Reboot</li>
+      <li>Jordan</li>
+    </ul>
+  </nav>
+  <sidebar>
+    <section>
+
+    </section>
+
+    <footer>
+       realizado por 
+    </footer>
+
+
   
 </body>
 </html>
