modificar la lista

--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Proyecto1 Git</title>
 </head>
+
 <body>
   <h1>Proyecto 1 Git</h1>
 
   <header>
     <h1>proyecto</h1>
   </header>
-  <nav>  
+  <nav>
     <ul>
       <li>adidas</li>
       <li>Nike</li>
       <li>Reboot</li>
       <li>Jordan</li>
+      <li>Redbull</li>
     </ul>
   </nav>
   <sidebar>
@@ -25,10 +28,11 @@
     </section>
 
     <footer>
-       realizado por 
+      realizado por
     </footer>
 
 
-  
+
 </body>
+
 </html>
