creacion de parrafo. y colocacion del año 2025

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>Proyecto 1 Git</h1>
 
   <header>
-    <h1>proyecto FICHA 2848524A</h1>
+    <h1>proyecto FICHA 2848524A -2025</h1>
   </header>
   <nav>
     <ul>
@@ -25,6 +25,11 @@
   </nav>
   <sidebar>
     <section>
+
+      <p>Desarrollo de aplicaciones
+        sobre estandares internacionales
+      </p>
+
 
     </section>
 
