--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>Proyecto 1 Git</h1>
 
   <header>
-    <h1>proyecto</h1>
+    <h1>proyecto FICHA 2848524A</h1>
   </header>
   <nav>
     <ul>
