--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <title>Proyecto1 Git</title>
 </head>
 
@@ -33,8 +34,26 @@
 
     </section>
 
-    <footer>
-      realizado por Juan Diego Alvarez 2025
+    <footer class="footer">
+      <div class="footer-content">
+          <div class="footer-left">
+              <h3>PROYECTO FICHA 2848524A - 2025</h3>
+            </div>
+            <div class="footer-center">
+          <h3>CONTACTO</h3>
+          <p><i class="fas fa-envelope"></i> ProyectoFicha524A@gmail.com</p>
+          <hr>
+          <p><i class="fas fa-clock"></i> Lunes a Viernes: 9am - 6pm</p>
+          <p><i class="fas fa-clock"></i> Sábado: 10am - 4pm</p>
+          <p><i class="fas fa-phone"></i> +57 123 456 7890</p>
+        </div>
+        <div class="footer-right">
+          <img src="Sena.png" />
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>Copyright &copy; PROYECTO FICHA 2848524A - 2025 </p>
+      </div>
     </footer>
 
 
