Agregue el menu

--- a/index.html
+++ b/index.html
@@ -6,25 +6,100 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>Proyecto1 Git</title>
+  <style>
+    /* Estilos rápidos para que se vea mejor sin depender de styles.css */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #333;
+      color: white;
+      padding: 15px;
+      text-align: center;
+    }
+
+    nav {
+      background-color: #444;
+      padding: 10px;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      justify-content: center;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav ul li {
+      margin: 0 15px;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav ul li a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      padding: 20px;
+    }
+
+    aside {
+      background-color: #f0f0f0;
+      padding: 15px;
+      margin: 20px;
+      border-radius: 5px;
+    }
+
+    footer {
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 10px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+  </style>
 </head>
 
 <body>
-  <h1>Proyecto 1 Git</h1>
-
   <header>
-    <h1>proyecto FICHA 2848524A -2025</h1>
+    <h1>Proyecto FICHA 2848524A - 2025</h1>
   </header>
+
+  <!-- Menú de navegación -->
   <nav>
     <ul>
-      <li>adidas</li>
-      <li>Nike</li>
-      <li>Reboot</li>
-      <li>Jordan</li>
-      <li>Croydon</li>
+      <li><a href="#">Adidas</a></li>
+      <li><a href="#">Nike</a></li>
+      <li><a href="#">Reboot</a></li>
+      <li><a href="#">Jordan</a></li>
+      <li><a href="#">Croydon</a></li>
     </ul>
   </nav>
-  <sidebar>
-    <section>
+
+  <main>
+    <h2>Proyecto 1 Git</h2>
+
+
+      <p>Desarrollo de aplicaciones sobre estándares internacionales</p>
+  </main>
+
+  <footer>
+    Realizado por Juan Diego Alvarez - 2025
+  </footer>
+</body>
+
+</html>
 
       <p>Desarrollo de aplicaciones
         sobre estandares internacionales
