Cabecera de index.html

--- a/index.html
+++ b/index.html
@@ -9,36 +9,33 @@
 </head>
 
 <body>
-  <h1>Proyecto 1 Git</h1>
-
   <header>
-    <h1>proyecto FICHA 2848524A -2025</h1>
+    <div class="header-container">
+      <h1>Proyecto FICHA 2848524A - 2025</h1>
+    </div>
+    
+    <!-- Barra de navegación mejorada -->
+    <nav>
+      <ul class="navigation-menu">
+        <li><a href="#adidas">Adidas</a></li>
+        <li><a href="#nike">Nike</a></li>
+        <li><a href="#reboot">Reboot</a></li>
+        <li><a href="#jordan">Jordan</a></li>
+        <li><a href="#croydon">Croydon</a></li>
+      </ul>
+    </nav>
   </header>
-  <nav>
-    <ul>
-      <li>adidas</li>
-      <li>Nike</li>
-      <li>Reboot</li>
-      <li>Jordan</li>
-      <li>Croydon</li>
-    </ul>
-  </nav>
-  <sidebar>
+
+  <main>
     <section>
-
-      <p>Desarrollo de aplicaciones
-        sobre estandares internacionales
-      </p>
-
-
+      <h2>Descripción</h2>
+      <p>Desarrollo de aplicaciones sobre estándares internacionales</p>
     </section>
+  </main>
 
-    <footer>
-      realizado por Juan Diego Alvarez 2025
-    </footer>
-
-
-
+  <footer>
+    <p>Realizado por Juan Diego Álvarez, 2025</p>
+  </footer>
 </body>
 
 </html>
