--- a/index.html
+++ b/index.html
@@ -25,13 +25,30 @@
   </nav>
   <sidebar>
     <section>
-
       <p>Desarrollo de aplicaciones
         sobre estandares internacionales
       </p>
-
-
     </section>
+    <!--Contet Teniente-->
+    <section>
+      <h2>Nike VS Adidas</h2>
+      <br>
+      <iframe width="640" height="360" src="https://www.youtube.com/embed/lReqiqUETpQ?autoplay=1&controls=0"
+        frameborder="0">
+      </iframe>
+      <h1>Nike (1964, EE.UU.):
+      </h1>
+      <ul>
+        <li>Enfoque en innovación, rendimiento y marketing agresivo (ej: "Just Do It").</li>
+        <li> Apuesta por tecnología punta (Air Max, Zoom, Flyknit).</li>
+        <li>Iconos como Michael Jordan, LeBron James, Serena Williams.</li>
+      </ul>
+      <h1>Adidas (1949, Alemania):</h1>
+        <ul>
+          <li>Tradición europea, fútbol y estilo de vida ("Impossible is Nothing").</li>
+          <li> Más vinculada al fútbol (patrocina la FIFA, Messi, Mbappé).</li>
+          <li>Colaboraciones con artistas y diseñadores (Kanye West, Stella McCartney).</li>
+        </ul>
 
     <footer>
       realizado por Juan Diego Alvarez 2025
